Puts all the section in an array

--- a/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.scss
+++ b/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.scss
@@ -1,4 +1,6 @@
 @import '../../../core/scss/ant.scss';
+@import "~bootstrap/dist/css/bootstrap.css";
+
 
 .main-nav-link-container {
   @include media-breakpoint-up('sm') {
