--- a/apps/havana500-webclient/src/app/features/second-level/second-level-deafult/second-level-deafult.component.html
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-deafult/second-level-deafult.component.html
@@ -1,3 +1,3 @@
-<p>
-  second-level-deafult works!
-</p>
+<div id="articles-summary-outer-container" class="container">
+  <ant-article-summary *ngFor="let article of articles" [article]="article"></ant-article-summary>
+</div>
