Minor changes in the layout and styles
Still there are issues with the linkRoutes, is not updating the page.
Also, with the main styles, is not showing all the main content

--- a/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
@@ -1,7 +1,8 @@
 <nav fxFlex fxFill fxLayout="row" fxLayoutAlign="space-between center">
     <mat-icon></mat-icon>
     <div fxHide.xs class="main-nav-link-container" fxFlex fxLayout="row" fxLayoutAlign="space-evenly center">
-        <a class="mat-white-500-bg" mat-flat-button *ngFor="let section of sections">{{section.name}}</a>      
+        <a class="mat-white-500-bg" mat-flat-button *ngFor="let section of sections" routerLink="/section/"
+        [queryParams]="{sectionName:section.name}">{{section.name}}</a>      
     </div>
 </nav>
 
