--- a/apps/havana500-webclient/src/app/features/layout/layout.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.html
@@ -1,10 +1,10 @@
-<div class="container container__overflowed">
+<div class="container__overflowed">
 
     <mat-toolbar class="toolbar mat-elevation-z1 mat-white-500-bg">
         <hav-toolbar fxFill></hav-toolbar>
     </mat-toolbar>
 
-    <div class="main-content">
+    <div class="main-content container">
         <hav-content></hav-content>
 
     </div>
