--- a/apps/havana500-webclient/src/app/features/layout/layout.component.scss
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.scss
@@ -1,14 +1,16 @@
 @import '../../core/scss/ant';
+@import "~bootstrap/dist/css/bootstrap.css";
 
-.container {
-  display: flex;
-  flex-direction: column;
-  // position: absolute; this can't be absolute. Also we shouldn't use the 'container' name
-  // top: 0;
-  // bottom: 0;
-  // left: 0;
-  // right: 0;
-}
+
+// .container {
+//   display: flex;
+//   flex-direction: column;
+//   // position: absolute; this can't be absolute. Also we shouldn't use the 'container' name
+//   // top: 0;
+//   // bottom: 0;
+//   // left: 0;
+//   // right: 0;
+// }
 
 .toolbar {
   position: relative;
@@ -18,12 +20,15 @@
 }
 
 .main-content {
-  height: -webkit-fill-available;
+  height: 100%;
   position: relative;
+  margin-top: 5rem;
+  overflow: scroll;
+  margin-bottom: 5rem;
 }
 
 .container__overflowed {
-  overflow: auto;
+  overflow: scroll;
 }
 
 .main-footer {
