--- a/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.scss
+++ b/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap/dist/css/bootstrap.css";
+
 // START of variables declaration:
 $comments-container-bColor: #ffffff;
 $comment-container-bColor: #E8F5E9;
