--- a/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.html
+++ b/apps/havana500-webclient/src/app/features/comment-home/comment-home/comment-home.component.html
@@ -6,22 +6,26 @@
 <div id="comments-outer-container">
     <form id="new-comment-outer-container" class="row" #newCommentForm="ngForm">
         <div id="new-comment-user-metadata" class="col-12 form-group">
-          <label for="new-comment-username">Nombre de usuario: 
+          <label class="col-12" for="new-comment-username">Nombre de usuario: 
           <input type="text" [(ngModel)]="newComment.userName" name="new-comment-username" id="new-comment-username" class="form-control col-xs-12 col-md-5" placeholder="Nombre">
         </label>
-          <label for="new-comment-useremail">Nombre de usuario: 
+          <label class="col-12" for="new-comment-useremail">Nombre de usuario: 
           <input type="text" [(ngModel)]="newComment.userEmail" name="new-comment-useremail" id="new-comment-useremail" class="form-control col-xs-12 col-md-5"
             placeholder="Correo">
           </label>
   
   
         </div>
-        <label for="new-comment-body">Comentario
-        <textarea type="text" [(ngModel)]="newComment.body" name="body" id="new-comment-body" class="col-12 form-control" #body="ngModel" required ></textarea>
+        <div class="new-comment-body-container col-xs-12 col-md-12">
+        <label class="col-12" for="new-comment-body">Comentario
+       
+        </label>
+        <textarea type="text" [(ngModel)]="newComment.body" name="body" id="new-comment-body" class="col-12 form-control" 
+        #body="ngModel" required rows="10" cols="35"></textarea>
         <div [hidden]="body.valid" class="alert alert-danger">
             Body is required
           </div>
-        </label>
+        </div>
           <button type="submit" class="btn btn-success" 
             id="new-comment-post-btn" (click)="postNewComment(); newCommentForm.reset()" [disabled] = "!newCommentForm.form.valid">Comentar!</button>
       </form>
