--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -1,4 +1,4 @@
-<div class="article-summary-outer-container" >
+<div class="article-summary-outer-container" (click)="navigateTo(article.id)" >
     <div class="main-article-summary-content" fxLayout="column" fxLayoutAlign="flex-start center">
         <h4 class="article-summary-title">{{article?.title}}</h4> 
         <p class="article-summary-body">{{article?.body}}</p>
