Updates the related articles in the article's view after the navigation

--- a/libs/shared/src/lib/components/article/article.component.html
+++ b/libs/shared/src/lib/components/article/article.component.html
@@ -20,7 +20,7 @@
     <h2 id="related-articles-header">Related articles</h2>
 
     <div id="related-articles-cards-container" class="row">
-      <ant-article-summary *ngFor="let article of relatedArticles" [article]="article" class="col-xs-12 col-md-3"></ant-article-summary>
+      <ant-article-summary *ngFor="let article of relatedArticles$ | async" [article]="article" class="col-xs-12 col-md-3"></ant-article-summary>
       <!-- for this try to use the grid-list from material -->
     </div>
   </div>
