Fixes the main styles
Now the page shows all the content when the user scroll down the app

--- a/apps/havana500-webclient/src/app/features/layout/layout.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.html
@@ -1,13 +1,14 @@
-<div class="container__overflowed">
-
+<div class="container__overflowed" id="site-main">
+  <div id="toolbar-outer-container">
     <mat-toolbar class="toolbar mat-elevation-z1 mat-white-500-bg">
-        <hav-toolbar fxFill></hav-toolbar>
+      <hav-toolbar fxFill></hav-toolbar>
     </mat-toolbar>
+  </div>
 
-    <div class="main-content container">
-        <hav-content></hav-content>
+  <div class="main-content container">
+    <hav-content></hav-content>
 
-    </div>
-    <!-- <hav-footer class="main-footer"></hav-footer> -->
+  </div>
+  <!-- <hav-footer class="main-footer"></hav-footer> -->
 
 </div>
