--- a/libs/shared/src/lib/components/article-metadata/article-metadata.component.scss
+++ b/libs/shared/src/lib/components/article-metadata/article-metadata.component.scss
@@ -1,5 +1,11 @@
 .metadata-icon {
   margin-right: 0.6rem;
+  font-size: 1em !important;
+  height: 1rem !important;
+  min-height: 1rem !important;
+  width: 1rem !important;
+  min-width: 1rem !important;
+
 }
 
 .metadata-panel {
