--- a/apps/havana500-webclient/src/app/features/layout/layout.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.html
@@ -9,6 +9,6 @@
     <hav-content></hav-content>
 
   </div>
-  <!-- <hav-footer class="main-footer"></hav-footer> -->
+  <hav-footer class="main-footer"></hav-footer>
 
 </div>
