--- a/apps/havana500-webclient/src/app/features/layout/layout.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.html
@@ -4,6 +4,7 @@
       <hav-toolbar fxFill></hav-toolbar>
     </mat-toolbar>
   </div>
+  <div class="toolbar-vertical-separator"></div>
 
   <div class="main-content container">
     <hav-content></hav-content>
