Fix merge problems

--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
@@ -1,2 +1,2 @@
 <!-- <hav-principal-slider></hav-principal-slider> -->
-<ant-article-summary [article]="article"></ant-article-summary>
+<!-- <ant-article-summary [article]="article"></ant-article-summary> -->
