--- a/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.html
+++ b/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.html
@@ -32,7 +32,7 @@
 
             <span tabindex="-1" class="title dialog-title">{{!onEdit?"Create Article":"Edit Article"}}</span>
 
-            <button mat-button class="mat-icon-button" (click)="dialogRef.close()" aria-label="Close dialog">
+            <button mat-button class="mat-icon-button" (click)="close()" aria-label="Close dialog">
                 <mat-icon>close</mat-icon>
             </button>
 
