Showing the images of the article's summary

--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -1,6 +1,6 @@
 <a class="article-summary-outer-container" (click)="navigateTo(article.id)">
   <div class="article-summary-img-container">
-    <!-- <img src="{{mainPictureRelPath}}" alt="{{article.mainPicture.seoFileName}}"> -->
+    <img src="{{mainPictureRelPath}}" alt="{{article.mainPicture.seoFileName}}">
 
   </div>
   <div class="main-article-summary-content" fxLayout="column" fxLayoutAlign="flex-start center">
