Renders the article's body as HTML
Working as expected

--- a/libs/shared/src/lib/components/article/article.component.html
+++ b/libs/shared/src/lib/components/article/article.component.html
@@ -11,7 +11,8 @@
     </div>
   </div>
 
-  <p id="article-body">{{article.body}}</p>
+  <section id="article-body" [innerHtml]="article.body"></section>
+  
 
 
   <mat-chip-list id="article-tags">
