Implements the functionalities for the imageSlideshow plugin
It's working with fake images

--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
@@ -1,2 +1,1 @@
-<!-- <hav-principal-slider></hav-principal-slider> -->
-<!-- <ant-article-summary [article]="article"></ant-article-summary> -->
+<hav-image-slider></hav-image-slider>
