--- a/apps/havana500-webclient/src/app/features/home/smart/image-slider/image-slider.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/image-slider/image-slider.component.html
@@ -1,3 +1,8 @@
-<p>
-  image-slider works!
-</p>
+<slideshow [height]="height"
+           [minHeight]="'525px'"
+           [autoPlay]="true"
+           [showArrows]="false"
+           [imageUrls]="imageUrls"
+           [lazyLoad]="imageUrls?.length > 1"
+           [autoPlayWaitForLazyLoad]="true">
+</slideshow>
