Finish the implementation of the shortCut section in the Home
It's working as expected but still we have to work on the styles

--- a/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/main/home.component.html
@@ -1,1 +1,5 @@
 <hav-image-slider></hav-image-slider>
+
+<section id="article-shortcut-container">
+  <hav-article-shortcuts></hav-article-shortcuts>
+</section>
