--- a/apps/havana500-webclient/src/app/features/home/smart/article-shortcuts/article-shortcuts.component.html
+++ b/apps/havana500-webclient/src/app/features/home/smart/article-shortcuts/article-shortcuts.component.html
@@ -1,16 +1,24 @@
 <div id="article-shortcur-inner-container">
   <mat-tab-group>
     <mat-tab label="DEPORTE">
-      <ant-article-summary *ngFor="let article of sportArticles | async" [article] = "article" class="col-xs-12 col-md-3"></ant-article-summary>
+      <div class="row">
+        <ant-article-summary *ngFor="let article of sportArticles | async" [article]="article" class="col-xs-12 col-md-3"></ant-article-summary>
+      </div>
     </mat-tab>
     <mat-tab label="CINE">
-      <ant-article-summary *ngFor="let article of cinemaArticles | async" [article] = "article" class="col-xs-12 col-md-3"></ant-article-summary>
+      <div class="row">
+        <ant-article-summary *ngFor="let article of cinemaArticles | async" [article]="article" class="col-xs-12 col-md-3"></ant-article-summary>
+      </div>
     </mat-tab>
     <mat-tab label="LITERATURA">
-      <ant-article-summary *ngFor="let article of literatureArticles | async" [article] = "article" class="col-xs-12 col-md-3"></ant-article-summary>
+      <div class="row">
+        <ant-article-summary *ngFor="let article of literatureArticles | async" [article]="article" class="col-xs-12 col-md-3"></ant-article-summary>
+      </div>
     </mat-tab>
     <mat-tab label="CULTURA">
-      <ant-article-summary *ngFor="let article of cultureArticles | async" [article] = "article" class="col-xs-12 col-md-3"></ant-article-summary>
+      <div class="row">
+        <ant-article-summary *ngFor="let article of cultureArticles | async" [article]="article" class="col-xs-12 col-md-3"></ant-article-summary>
+      </div>
     </mat-tab>
 
   </mat-tab-group>
