--- a/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
@@ -1,8 +1,19 @@
 <nav fxFlex fxFill fxLayout="row" fxLayoutAlign="space-between center">
-    <mat-icon></mat-icon>
-    <div fxHide.xs class="main-nav-link-container" fxFlex fxLayout="row" fxLayoutAlign="space-evenly center">
-            <a class="mat-white-500-bg" mat-flat-button *ngFor="let section of sections" [routerLink]="['/section',section.name]"
-            >{{section.name}}</a>     
-    </div>
-</nav>
+  <mat-icon></mat-icon>
 
+
+  <div fxHide.xs class="main-nav-link-container" fxFlex fxLayout="row" fxLayoutAlign="space-evenly center">
+        <a mat-button [routerLink]="['/section/eventos']">Eventos</a>
+        <a mat-button [routerLink]="['/section/experiencias']">Experiencias</a>
+        <a mat-button [routerLink]="['/section/galeria']">Galeria</a>
+        <a mat-button [matMenuTriggerFor]="enterteiment">Entretenimiento</a>
+      
+        <mat-menu #enterteiment="matMenu">
+          <a mat-menu-item [routerLink]="['/section/literatura']">Literatura</a>
+          <a mat-menu-item [routerLink]="['/section/deportes']">Deportes</a>
+          <a mat-menu-item [routerLink]="['/section/cine']">Cine</a>
+          <a mat-menu-item [routerLink]="['/section/cultura']">Cultura</a>
+        </mat-menu>
+  </div>
+
+</nav>
