--- a/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/main-menu/toolbar.component.html
@@ -3,17 +3,18 @@
 
 
   <div fxHide.xs class="main-nav-link-container" fxFlex fxLayout="row" fxLayoutAlign="space-evenly center">
-        <a mat-button [routerLink]="['/section/eventos']">Eventos</a>
-        <a mat-button [routerLink]="['/section/experiencias']">Experiencias</a>
-        <a mat-button [routerLink]="['/section/galeria']">Galeria</a>
-        <a mat-button [matMenuTriggerFor]="enterteiment">Entretenimiento</a>
-      
-        <mat-menu #enterteiment="matMenu">
-          <a mat-menu-item [routerLink]="['/section/literatura']">Literatura</a>
-          <a mat-menu-item [routerLink]="['/section/deportes']">Deportes</a>
-          <a mat-menu-item [routerLink]="['/section/cine']">Cine</a>
-          <a mat-menu-item [routerLink]="['/section/cultura']">Cultura</a>
-        </mat-menu>
+      <div style="z-index: 9999999;">
+    <a mat-button [routerLink]="['/section/eventos']">Eventos</a>
+    <a mat-button [routerLink]="['/section/experiencias']">Experiencias</a>
+    <a mat-button [routerLink]="['/section/galeria']">Galeria</a>
+    <a mat-button [matMenuTriggerFor]="entertainment" (mouseup)="onSelect($event)">Entretenimiento <mat-icon>keyboard_arrow_down</mat-icon></a>
+      <mat-menu #entertainment="matMenu" id="entertainment">
+        <a mat-menu-item [routerLink]="['/section/literatura']">Literatura</a>
+        <a mat-menu-item [routerLink]="['/section/deportes']">Deportes</a>
+        <a mat-menu-item [routerLink]="['/section/cine']">Cine</a>
+        <a mat-menu-item [routerLink]="['/section/cultura']">Cultura</a>
+      </mat-menu>
+    </div>
   </div>
 
 </nav>
