--- a/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.html
+++ b/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.html
@@ -175,8 +175,9 @@
     <div mat-dialog-actions class="m-0 p-16" fxLayout="row" fxLayoutAlign="flex-end center">
         <!-- TODO: how to change the name of the input btn??  -->
         <!-- TODO: This can be accesible when the article is created, so we have to create the article and the let the user to edit it -->
-        <input #mainPicture type="file" />
-        <button mat-raised-button (click)="addMainPicture(article?.id)" class="mat-accent">Guardar imagen</button>
+        <input hidden #mainPicture id="logoUrl" accept="image/*" type="file" (change)="addMainPicture(article?.id)" />
+
+        <button mat-raised-button (click)="mainPicture.click()" class="mat-accent">Guardar imagen</button>
 
         <button mat-raised-button (click)="save()" class="save-button mat-accent" [disabled]="form.invalid" aria-label="SAVE ">
             SAVE
