--- a/apps/havana500-admin/src/app/features/marketing/dummy/create-update/create-update-marketing.component.html
+++ b/apps/havana500-admin/src/app/features/marketing/dummy/create-update/create-update-marketing.component.html
@@ -30,7 +30,8 @@
                 <mat-icon>label</mat-icon>
             </button>
 
-            <span tabindex="-1" class="title dialog-title">{{!onEdit?"Create Article":"Edit Article"}}</span>
+            <span tabindex="-1" class="title dialog-title">{{(isTemporary || !onEdit) ?"Create Marketing":"Edit
+                Marketing"}}</span>
 
             <button mat-button class="mat-icon-button" (click)="close()" aria-label="Close dialog">
                 <mat-icon>close</mat-icon>
@@ -67,7 +68,8 @@
                 <div class="mb-24" fxLayout="row" fxLayoutAlign="start start">
                     <mat-icon fxHide fxShow.gt-sm class="mr-12 mt-12"></mat-icon>
                     <mat-form-field fxFlex>
-                        <mat-select formControlName="pictureType" placeholder="Select a Marketing Level" required>
+                        <mat-select formControlName="pictureType" id="pictureType" placeholder="Select a Marketing Level"
+                            required>
                             <mat-option *ngFor="let option of marketingType | keys" [value]="option.key">
                                 {{option.value}}
                             </mat-option>
@@ -122,7 +124,7 @@
 
         <button mat-raised-button (click)="mainPicture.click()" class="mat-accent">Guardar imagen</button>
 
-        <button mat-raised-button class="save-button mat-accent" [disabled]="form.invalid" aria-label="SAVE ">
+        <button mat-raised-button (click)="save()" class="save-button mat-accent" [disabled]="form.invalid" aria-label="SAVE ">
             SAVE
         </button>
     </div>
