--- a/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.scss
+++ b/apps/havana500-admin/src/app/features/article/dummy/create-update/create-update-article.component.scss
@@ -62,4 +62,12 @@
   .unmaterial-label {
     font: 500 13px/20px Roboto, 'Helvetica Neue', sans-serif;
   }
+
+  .article-image {
+    max-height: 100%;
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+    justify-content: center;
+  }
 }
