Increase picture row height

--- a/apps/havana500-admin/src/app/features/marketing/dummy/create-update/create-update-marketing.component.html
+++ b/apps/havana500-admin/src/app/features/marketing/dummy/create-update/create-update-marketing.component.html
@@ -43,7 +43,7 @@
             <div class="article-title">{{name.value}}</div>
         </mat-toolbar-row>
 
-        <mat-toolbar-row>
+        <mat-toolbar-row class="h-120">
             <div class="article-image">
                 <img src="{{marketing?.relativePath}}" alt="{{marketing?.seoFileName}}">
             </div>
